tests/reject/infer_bare_empty.hi
fn main():
    xs := []
    push(xs, 1)
